--- a/.github/workflows/pack_publish.yml
+++ b/.github/workflows/pack_publish.yml
@@ -14,8 +14,8 @@ jobs:
         
       - name: Set API Key
         env:
-            CHOCO_SECRET: ${{secrets.CHOCO_SECRET}}
-        run: choco apikey -k $CHOCO_SECRET -source https://push.chocolatey.org/
+            CHOCO_SECRET: ${{ secrets.CHOCO_SECRET }}
+        run: choco apikey -k "$CHOCO_SECRET" -source https://push.chocolatey.org/
         
       - name: Publish
         shell: powershell
